--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
-  <link rel="stylesheet" href="css/main_css.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <h1>BUST-E-MOJI!!</h1>
 <canvas id="mainCanvas" width="525" height="650"></canvas>
 
 </body>
-<script src="js/main_js.js"></script>
+<script src="js/main.js"></script>
 </html>
